--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-      "start": "node index",
+      "start": "node server",
       "dev": "nodemon index",
       "seed": "node utils/seed"
     },
